Home : Mobile : Lang Button Avoid text-break on Android

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -122,6 +122,7 @@ body {
   text-align: center;
   a {
     display: inline-block;
+    white-space: nowrap;
     padding: 10px 30px;
     font-size: 20px;
     @include border-radius(4px);
